Fix spacing above store safety copy section
Also included minor refactor to signview.less

Fixes:
https://trello.com/c/TDlBivne

--- a/frontend/app/less/postsignview/create_account_section.less
+++ b/frontend/app/less/postsignview/create_account_section.less
@@ -36,7 +36,9 @@
   }
 }
 
-.save-backup-copy {
+.section.save.save-backup-copy {
+  margin-top: 0;
+
   .label {
     display: block;
     padding-bottom: 5px;
