--- a/frontend/app/less/signview.less
+++ b/frontend/app/less/signview.less
@@ -228,8 +228,7 @@
 
   .save {
     background-color: @white;
-    margin-bottom : 15px;
-    margin-top: 15px;
+    margin: 0 0 15px;
     overflow: none;
     padding: 40px;
     text-align: center;
@@ -336,7 +335,7 @@
     background: #e9e9e9;
     border: 1px solid #cccccc;
     margin: 0 auto;
-    padding: 36px 36px 36px 37px;
+    padding: 36px;
     width: 943px;
 
     .border-radius(0, 5px, 5px, 0);
